--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.1",
-    "puppeteer": "^23.9.0"
+    "puppeteer": "^23.9.0",
+    "screenshot-desktop": "^1.15.0"
   }
 }
